# capacitor-ffmpeg

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CapgoCapacitorFfmpeg.podspec  FEATURE_MATRIX.md  Package.swift  README.md  ROADMAP.md  package-lock.json  package.json  rollup.config.mjs
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  deploy_example_app.yml  test.yml
android/: build.gradle
example-app/: README.md  capacitor.config.json  capacitor.config.ts  package-lock.json  package.json  vitest.config.ts
example-app/.maestro/: image-conversion.yaml  runtime-checks.yaml  unsupported-reencode-android.yaml  video-reencode.yaml
example-app/android/: capacitor.settings.gradle
example-app/scripts/: fix-android-plugin-link.mjs  run-maestro-android-ci.sh  run-maestro-android.sh  run-maestro-ios.sh
example-app/src/: global.d.ts  index.html  styles.css
rust/: .gitignore  Cargo.toml  README.md  apply_ffmpeg_sys_ios_sim_patch.sh  build_ffmpeg_ios_sim_arm64.sh  build_ios.sh  build_ios_sim_arm64.sh  build_native_xcframework.sh  build_openh264_ios.sh  build_x264_ios.sh  build_x264_ios_sim_arm64.sh
rust/patches/: apply-patches.sh  ffmpeg-sys-ios-sim.patch  generate-patch.sh
rust/patches/ffmpeg/: 001-fix-gitignore.patch
rust/patches/ffmpeg-sys/: 001-ios-simulator-fixes.patch
rust/src/: lib.rs  plugin.rs
scripts/: deploy-example-capgo.mjs  run-ios-tests.mjs  sync-plugin-version.mjs
src/: definitions.ts  index.ts  pluginVersion.ts  web.ts
test/: TEST_INVENTORY.md  web.test.ts
test/fixtures/: README.md
(+28 files in other folders)
